src/config/snapshots/handlr__config__main_config__tests__print_handlers_detailed_json-2.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
{"added_associations":[{"mime":"x-scheme-handler/terminal","handlers":["org.wezfurlong.wezterm.desktop"]}],"default_apps":[{"mime":"application/vnd.oasis.opendocument.*","handlers":["startcenter.desktop"]},{"mime":"application/vnd.openxmlformats-officedocument.*","handlers":["startcenter.desktop"]},{"mime":"text/plain","handlers":["helix.desktop","nvim.desktop","kakoune.desktop"]},{"mime":"video/asdf","handlers":["mpv.desktop"]},{"mime":"video/mp4","handlers":["mpv.desktop"]},{"mime":"video/webm","handlers":["brave.desktop"]}],"system_apps":[]}
