src/config/snapshots/handlr__config__main_config__tests__print_handlers_detailed_piped.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
Default Apps
mime                                           	handlers                                    
application/vnd.oasis.opendocument.*           	startcenter.desktop                         
application/vnd.openxmlformats-officedocument.*	startcenter.desktop                         
text/plain                                     	helix.desktop, nvim.desktop, kakoune.desktop
video/asdf                                     	mpv.desktop                                 
video/mp4                                      	mpv.desktop                                 
video/webm                                     	brave.desktop                               
Added associations
mime                     	handlers                      
x-scheme-handler/terminal	org.wezfurlong.wezterm.desktop
System Apps
mime	handlers
