src/config/snapshots/handlr__config__main_config__tests__print_handlers_piped.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
mime                                           	handlers                                    
application/vnd.oasis.opendocument.*           	startcenter.desktop                         
application/vnd.openxmlformats-officedocument.*	startcenter.desktop                         
text/plain                                     	helix.desktop, nvim.desktop, kakoune.desktop
video/asdf                                     	mpv.desktop                                 
video/mp4                                      	mpv.desktop                                 
video/webm                                     	brave.desktop
