src/config/snapshots/handlr__config__main_config__tests__show_handler.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
tests/Helix.desktop
