src/config/snapshots/handlr__config__main_config__tests__show_handler_json.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
{"cmd":"wezterm start --cwd . -e hx","handler":"tests/Helix.desktop","name":"Helix"}
